<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="16dp"
    tools:context=".ui.AuthenticationActivity">

    <include
        android:id="@+id/biometric_status"
        layout="@layout/biometric_authenticators_status" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authentication_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/basic_biometric_authentication"
        app:layout_constraintTop_toBottomOf="@id/biometric_status" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/authorization_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="auth_biometric_strong,auth_biometric_weak,auth_device_credential"
        app:flow_horizontalGap="8dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authentication_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_biometric_strong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_strong"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_biometric_weak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biometric_weak"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_device_credential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_credential"
        android:textSize="12sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/crypto_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/encrypt_and_decrypt"
        app:layout_constraintTop_toBottomOf="@id/authorization_flow" />

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="encrypt_button,decrypt_button"
        app:flow_horizontalGap="8dp"
        android:id="@+id/crypto_flow"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crypto_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/encrypt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrypt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:enabled="false"
        android:textSize="12sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/crypto_data"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/crypto_flow" />


</androidx.constraintlayout.widget.ConstraintLayout>