<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/biometric_strong_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric_strong"
            app:layout_constraintBottom_toBottomOf="@id/biometric_strong"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/biometric_strong" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/biometric_weak_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biometric_weak"
            app:layout_constraintBottom_toBottomOf="@id/biometric_weak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/biometric_weak" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/device_credential_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_credential"
            app:layout_constraintBottom_toBottomOf="@id/device_credential"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/device_credential" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/biometric_strong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/biometric_strong_label"
            app:layout_constraintTop_toTopOf="parent"
            android:drawablePadding="5dp"
            tools:text="Success" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/biometric_weak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_vertical"
            android:layout_marginVertical="5dp"
            android:drawablePadding="5dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/biometric_weak_label"
            app:layout_constraintTop_toBottomOf="@id/biometric_strong"
            tools:text="Success" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/device_credential"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/device_credential_label"
            app:layout_constraintTop_toBottomOf="@id/biometric_weak"
            tools:text="Success" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>